# fastapi-dynamic-response

./: Dockerfile  README.md  docker-entrypoint.sh  justfile  kind-config.yaml  otel-collector-config.yaml  package-lock.json  pyproject.toml  requirements.txt  sitemap.html
k8s/base/: deployment.yaml
src/fastapi_dynamic_response/: auth.py  constant.py  dependencies.py  globals.py  logging_config.py  main.py  middleware.py  settings.py  tracing.py
src/fastapi_dynamic_response/base/: router.py
src/fastapi_dynamic_response/cli/: .null-ls_858127_app.py  app.py  cli.py
src/fastapi_dynamic_response/zpages/: router.py
static/: app.css
templates/: 404.html  another_example.html  base.html  example.html  navigation.html  post_message.html  sitemap.html  status.html
